--- a/hack/deploy-loghacker.yaml
+++ b/hack/deploy-loghacker.yaml
@@ -1,15 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: mount-dev
+  name: log-hacker
   namespace: mount-log
 spec:
   serviceAccountName: logger
   containers:
   - name: escaper
-    image: ubuntu:22.04
-    command: ["sleep"]
-    args: ["infinity"]
+    image: shadowstar884/loghacker
     volumeMounts:
     - name: logs
       mountPath: /var/log/host
